--- a/az-bible-trivia/01-A/1.1-Abel.md
+++ b/az-bible-trivia/01-A/1.1-Abel.md
@@ -1,6 +1,6 @@
 # 1.1 Abel
 
-> Are you "able" to handle "Abel"? Most everyone knows Abel was the world's first murder victim...but what else do you know about this unfortunate man?
+Are you "able" to handle "Abel"? Most everyone knows Abel was the world's first murder victim...but what else do you know about this unfortunate man?
 
 Points | Question | Answer
 ---    | ---      | ---
