--- a/az-bible-trivia/01-A/1.2-AKA.md
+++ b/az-bible-trivia/01-A/1.2-AKA.md
@@ -1,6 +1,6 @@
 # 1.2 AKA
 
-> You've seen these initials in TV police shows--they stand for "also known as." What do you know about the alternative names of the Bible characters?
+You've seen these initials in TV police shows--they stand for "also known as." What do you know about the alternative names of the Bible characters?
 
 Points | Question | Answer
 ---    | ---      | ---
