--- a/az-bible-trivia/01-A/1.1-Abel.md
+++ b/az-bible-trivia/01-A/1.1-Abel.md
@@ -7,5 +7,5 @@ Points | Question | Answer
 100    | What "first couple" gave birth to Abel? | Adam & Eve (Gen 4:1-2)
 200    | What unaccepted offering provoked Cain's murder of Abel? | fruits of the soil (Gen 4:3-5)
 300    | What five-word question did Cain use to dismiss God's question about Abel's whereabouts? | "Am I my brother's keeper?" (Gen 4:9)
-400    | What part of Abel ddi God tell Cain  "cries out to me from the ground"? | his blood (Gen 4:10)
+400    | What part of Abel did God tell Cain "cries out to me from the ground"? | his blood (Gen 4:10)
 500    | What third son did Eve say God gave her in place of the murdered Abel? | Seth (Gen 4:25)
